--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ a {
   border-left: 3px solid #7200a1; }
 
 .wrapper {
-  background-color: #170f23;
+  background-color: #310e68;
+  background-image: linear-gradient(316deg, #310e68 0%, #5f0f40 74%);
   height: 100vh;
   display: flex; }
   @media only screen and (max-width: 1024px) {
@@ -97,21 +98,23 @@ a {
     display: none; }
 
 main {
-  width: calc(100% - 240px);
+  width: 100%;
   padding: 16px 30px; }
 
 .header {
   display: flex;
   justify-content: space-between; }
   .header .search {
-    padding: 8px 30px;
+    padding: 8px 30px 8px 0;
     border-radius: 100px;
     display: flex;
     align-items: center;
     width: 100%;
+    height: 40px;
     max-width: 540px;
     background-color: rgba(255, 255, 255, 0.1); }
   .header .search-icon {
+    width: 55px;
     background: none;
     border: none;
     cursor: pointer;
@@ -125,7 +128,10 @@ main {
     outline: none;
     width: 100%;
     padding: 0 15px;
-    background: none; }
+    background: none;
+    margin: 0;
+    display: flex;
+    align-items: center; }
     .header .search-input-item::placeholder {
       color: #fff; }
   .header .tool {
@@ -189,8 +195,7 @@ main {
   border-radius: 10px;
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
-  cursor: pointer; }
+  margin-bottom: 10px; }
   .song i {
     color: #fff; }
 
@@ -224,13 +229,16 @@ main {
 .song-title {
   font-weight: 600;
   font-size: 16px;
-  color: #ccc; }
+  color: #ccc;
+  width: 20%;
+  margin-left: 20px; }
 
 .song-album {
   color: #ccc;
   font-weight: 400;
   font-size: 14px;
-  margin-left: auto; }
+  margin-left: auto;
+  width: 20%; }
 
 .song-time {
   color: #ccc;
@@ -251,7 +259,7 @@ main {
   margin-top: 5px;
   background-color: rgba(255, 255, 255, 0.1);
   padding: 10px;
-  border-radius: 12px 12px 0 0;
+  border-radius: 12px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; }
 
 .player-box {
@@ -414,10 +422,8 @@ main {
     overflow: hidden;
     text-overflow: ellipsis;
     word-break: break-word;
-    max-width: 100px; }
-
-  .song-album {
-    max-width: 50px; }
+    display: block;
+    max-width: 30%; }
 
   .heading {
     font-size: 20px; }
@@ -459,8 +465,205 @@ main {
       background-color: rgba(255, 255, 255, 0.1) !important;
       border-left: 3px solid #7200a1; }
 
-.box-video {
-  margin-top: 40px;
-  display: none; }
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1; }
+
+/* Add a background color when the inputs get focus */
+input[type="text"]:focus,
+input[type="password"]:focus {
+  background-color: #ddd;
+  outline: none; }
+
+/* Set a style for all buttons */
+button {
+  background-color: #04aa6d;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9; }
+
+button:hover {
+  opacity: 1; }
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  padding: 14px 20px;
+  background-color: #f44336; }
+
+/* Float cancel and signup buttons and add an equal width */
+.cancelbtn,
+.signupbtn {
+  float: left;
+  width: 50%; }
+
+/* Add padding to container elements */
+.container {
+  padding: 16px; }
+
+/* The Modal (background) */
+.modal1 {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 999;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  background-color: rgba(0, 0, 0, 0.7);
+  padding-top: 50px;
+  /* Modal Content/Box */
+  /* Style the horizontal ruler */
+  /* The Close Button (x) */
+  /* Clear floats */
+  /* Change styles for cancel button and signup button on extra small screens */ }
+  .modal1 .modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto;
+    /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 50%;
+    /* Could be more or less, depending on screen size */ }
+  .modal1 hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px; }
+  .modal1 .clearfix::after {
+    content: "";
+    clear: both;
+    display: table; }
+  .modal1 .signupbtn {
+    width: 100%; }
+  @media screen and (max-width: 300px) {
+    .modal1 .cancelbtn,
+    .modal1 .signupbtn {
+      width: 100%; } }
+  .modal1 .animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s; }
+@-webkit-keyframes animatezoom {
+  from {
+    -webkit-transform: scale(0); }
+  to {
+    -webkit-transform: scale(1); } }
+@keyframes animatezoom {
+  from {
+    transform: scale(0); }
+  to {
+    transform: scale(1); } }
+/* The Modal (background) */
+.modal2 {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.7);
+  /* Black w/ opacity */
+  padding-top: 60px;
+  /* Set a style for all buttons */
+  /* Extra styles for the cancel button */
+  /* Center the image and position the close button */
+  /* Modal Content/Box */
+  /* The Close Button (x) */
+  /* Add Zoom Animation */
+  /* Change styles for span and cancel button on extra small screens */ }
+  .modal2 input[type="text"],
+  .modal2 input[type="password"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box; }
+  .modal2 button {
+    background-color: #04aa6d;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%; }
+  .modal2 button:hover {
+    opacity: 0.8; }
+  .modal2 .cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336; }
+  .modal2 img.avatar {
+    width: 40%;
+    border-radius: 50%; }
+  .modal2 .container {
+    padding: 16px; }
+  .modal2 span.psw {
+    float: right;
+    padding-top: 16px; }
+  .modal2 .modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto;
+    /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 50%;
+    /* Could be more or less, depending on screen size */
+    height: 60%; }
+  .modal2 .animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s; }
+@-webkit-keyframes animatezoom {
+  from {
+    -webkit-transform: scale(0); }
+  to {
+    -webkit-transform: scale(1); } }
+@keyframes animatezoom {
+  from {
+    transform: scale(0); }
+  to {
+    transform: scale(1); } }
+  @media screen and (max-width: 300px) {
+    .modal2 span.psw {
+      display: block;
+      float: none; }
+    .modal2 .cancelbtn {
+      width: 100%; } }
+
+.imgcontainer {
+  margin: 24px 0 0 16px;
+  position: relative; }
+
+.close {
+  position: absolute;
+  right: 20px;
+  top: -10px;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold; }
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
